# dali3

./: .copier-answers.yml  Dockerfile  Makefile  Pipfile  setup.cfg  tox.ini
cloudbuild/: build.yaml
src/dali_poo/: __main__.py  bot.py  manifest.yaml
terraform/: .terraform.lock.hcl  pipeline.tf  providers.tf  slackbot.tf  user-data.yaml  variables.tf
tests/: test_command_help.py  test_mention_help.py
