[metadata]
name = dali-poo
version = 0.0.0
author = al skratch
url = https://source.developers.google.com/p/dali3-385220/r/dali-poo
author_email = isitalexitis@gmail.com
description = images with dall-e
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:

zip_safe = True
include_package_data = True
install_requires =
    click
    slack_bolt
    gcloud-config-helper
    google-cloud-secret-manager
use_scm_version = True


[options.packages.find]
where=
  src
